--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /JavaApplication1/build/
 /JavaApplication2/nbproject/private/
 /JavaApplication2/build/
+/sceaner/nbproject/private/
+/sceanner/nbproject/private/
+/scanner/nbproject/private/
+/scanner/build/
+/UseScanner/nbproject/private/
+/UseScanner/build/
