--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@
 /scanner/build/
 /UseScanner/nbproject/private/
 /UseScanner/build/
+/pracscanner/nbproject/private/
+/pracscanner/build/
+/ConvertMinutes/nbproject/private/
+/ConvertMinutes/build/
+/Calculate Circale/nbproject/private/
+/Calculate Circale/build/
+/JavaApplication10/nbproject/private/
+/CircleCalculate2/nbproject/private/
+/JavaApplication12/nbproject/private/
+/carent time/nbproject/private/
