--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /CircleCalculate2/nbproject/private/
 /JavaApplication12/nbproject/private/
 /carent time/nbproject/private/
+/practices/nbproject/private/
+/practices/build/
+/calculateInterest/nbproject/private/
+/calculateInterest/build/
