--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /practices/build/
 /calculateInterest/nbproject/private/
 /calculateInterest/build/
+/PvaCalculation/nbproject/private/
+/PvaCalculation/build/
