--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /calculateInterest/build/
 /PvaCalculation/nbproject/private/
 /PvaCalculation/build/
+/RadiausCalculate/nbproject/private/
+/RadiausCalculate/build/
