--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@
 /PvaCalculation/build/
 /RadiausCalculate/nbproject/private/
 /RadiausCalculate/build/
+/PositiveNegativeOdd/nbproject/private/
+/PositiveNegativeOdd/build/
+/LeapYear/nbproject/private/
+/LeapYear/build/
+/Calculator/nbproject/private/
+/CalculatorByUsingSwith/nbproject/private/
+/CalculatorByUsingSwith/build/
