--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /Calculator/nbproject/private/
 /CalculatorByUsingSwith/nbproject/private/
 /CalculatorByUsingSwith/build/
+/Minigame/nbproject/private/
+/Minigame/build/
