--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /PvaCalculation/build/
 /RadiausCalculate/nbproject/private/
 /RadiausCalculate/build/
+/FindOutLargestNumber/target/
+/CheckVowelAndConsonent/target/
+/GradeCalculate/target/
