--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@
 /Task2/nbproject/private/
 /Task2/build/
 /Switchuse/target/
+/GuessNumberThreeTimes/nbproject/private/
+/GuessNumberThreeTimes/build/
+/DoWhile/nbproject/private/
+/DoWhile/build/
