--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,12 @@
 /Count/build/
 /OverLoadingMethod/nbproject/private/
 /OverLoadingMethod/build/
+/Learn/nbproject/private/
+/LeranArrat/nbproject/private/
+/LeranArrat/build/
+/LeranArrat/dist/
+/Learn/build/
+/Arrays/nbproject/private/
+/Arrays/build/
+/UsurNameAndPasswordMatching/nbproject/private/
+/UsurNameAndPasswordMatching/build/
