--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@
 /Arrays/build/
 /UsurNameAndPasswordMatching/nbproject/private/
 /UsurNameAndPasswordMatching/build/
+/MaxAndMinimunNumber/nbproject/private/
+/MaxAndMinimunNumber/build/
+/MaxAndMinByMethod/nbproject/private/
+/MaxAndMinByMethod/build/
+/Fibonacci/nbproject/private/
+/Fibonacci/build/
