--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@
 /MaxAndMinByMethod/build/
 /Fibonacci/nbproject/private/
 /Fibonacci/build/
+/MultipleArray/nbproject/private/
+/MultipleArray/build/
