--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@
 /Fibonacci/build/
 /MultipleArray/nbproject/private/
 /MultipleArray/build/
+/JavaApplication41/nbproject/private/
+/MultipleArrays/nbproject/private/
+/MultipleArrays/build/
+/BabbleShoting/nbproject/private/
+/TwoDimentionMethode/nbproject/private/
+/TwoDimentionMethode/build/
