--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,10 @@
 /TwoDimentionMethode/build/
 /ConstrentMethod/target/
 /Constract2/target/
+/ClassAndObject/nbproject/private/
+/Classtext/nbproject/private/
+/Classtext/build/
+/PrimeNumberCheck/nbproject/private/
+/PrimeNumberCheck/build/
+/MaxMinFind/nbproject/private/
+/MaxMinFind/build/
