--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,6 @@
 /PrimeNumberCheck/build/
 /MaxMinFind/nbproject/private/
 /MaxMinFind/build/
+/ClassTest/nbproject/private/
+/ClassTest/dist/
+/ClassTest/build/
