--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@
 /ClassTest/dist/
 /ClassTest/build/
 /Fibonacci2/nbproject/private/
+/ClassAndObjectArray/nbproject/private/
+/ClassAndObjectArray/build/
