--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@
 /BigInteger/nbproject/private/
 /SupSubClass/nbproject/private/
 /SupSubClass/build/
+/IncaptualitationTest/nbproject/private/
+/IncaptualitationTest/build/
+/IncaptualitationTest/dist/
