--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,10 @@
 /IncaptualitationTest/nbproject/private/
 /IncaptualitationTest/build/
 /IncaptualitationTest/dist/
+/JavaApplication55/nbproject/private/
+/FileClass/nbproject/private/
+/FileClass/build/
+/ClassFile/nbproject/private/
+/ClassFile/build/
+/FileEvent/nbproject/private/
+/FileEvent/build/
