--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,7 @@
 /FileEvent/nbproject/private/
 /FileEvent/build/
 /FileClassInput/nbproject/private/
+/ReadWeb/nbproject/private/
+/ReadWeb/build/
+/ClassTestVehicale/nbproject/private/
+/ClassTestVehicale/build/
