--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@
 /ReadWeb/build/
 /ClassTestVehicale/nbproject/private/
 /ClassTestVehicale/build/
+/Recursion/nbproject/private/
+/Recursion/build/
+/FileReadAndWrite/nbproject/private/
+/FileReadAndWrite/build/
