--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,7 @@
 /BankStatement/nbproject/private/
 /BankStatement/dist/
 /BankStatement/build/
+/Exception Hendalar/nbproject/private/
+/TwodeArrays/nbproject/private/
+/Exception Hendalar/build/
+/Fibonacci2/build/
