--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@
 /TwodeArrays/nbproject/private/
 /Exception Hendalar/build/
 /Fibonacci2/build/
+/StackTest/target/
+/StaticMethodsForListsAndCollections/target/
