--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@
 /Fibonacci2/build/
 /StackTest/target/
 /StaticMethodsForListsAndCollections/target/
+/StudentDetails64/nbproject/private/
+/StudentDetails64/build/
