--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@
 /StudentDetails64/nbproject/private/
 /StudentDetails64/build/
 /LearnMap/target/
+/InsertionSort/nbproject/private/
+/InsertionSort/build/
