--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,6 @@
 /LearnDatabse/nbproject/private/
 /Database3/nbproject/private/
 /Pos/nbproject/private/
+/PosMetin/nbproject/private/
+/PosProject/nbproject/private/
+/PosProject/build/
