--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,7 @@
 /CarProject/dist/
 /CRUD/nbproject/private/
 /CRUD/build/
+/CDPractice/nbproject/private/
+/CRUD/dist/
+/CDPractice/build/
+/CDPractice/dist/
