--- a/CDPractice/nbproject/project.properties
+++ b/CDPractice/nbproject/project.properties
@@ -28,20 +28,18 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CRUD.jar
+dist.jar=${dist.dir}/CDPractice.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CRUD
+dist.jlink.output=${dist.jlink.dir}/CDPractice
 excludes=
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0.jar
 file.reference.sql.jar=lib\\sql.jar
-file.reference.src-util=..\\CDPractice\\src\\util
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.sql.jar}:\
-    ${file.reference.src-util}
+    ${file.reference.sql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CRUD
-main.class=crud.CRUD
+jlink.launcher.name=CDPractice
+main.class=cdpractice.CDPractice
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
