--- a/PosAgain/nbproject/project.properties
+++ b/PosAgain/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CDPractice.jar
+dist.jar=${dist.dir}/PosAgain.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CDPractice
+dist.jlink.output=${dist.jlink.dir}/PosAgain
 excludes=
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0.jar
 file.reference.sql.jar=lib\\sql.jar
@@ -74,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CDPractice
-main.class=cdpractice.CDPractice
+jlink.launcher.name=PosAgain
+main.class=posagain.PosAgain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
