--- a/CRUD/nbproject/project.properties
+++ b/CRUD/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.output=${dist.jlink.dir}/CRUD
 excludes=
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0.jar
 file.reference.sql.jar=lib\\sql.jar
-file.reference.src-util=..\\CDPractice\\src\\util
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.sql.jar}:\
-    ${file.reference.src-util}
+    ${file.reference.sql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
